--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -6,3 +6,5 @@ $color-orange:rgb(235, 158, 15);
 $color-dark-grey:#777;
 $color-light-grey:rgb(228, 215, 215);
 $color-black:#000;
+$section-padding:6rem 2rem;
+$footer-padding:10rem 4rem;
