--- a/sass/layout/_cta-section.scss
+++ b/sass/layout/_cta-section.scss
@@ -2,6 +2,9 @@
     padding:8rem 4rem;
     background-color: $color-primary;
     color:$color-white;
+    &--circle-box{
+        text-align: center;
+    }
     &--box{
 
     }
