--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,8 +18,7 @@
 @import "layout/teams-section";
 @import "layout/img-row__section";
 @import "layout/contact-section";
+@import "layout/about-section";
 @import "layout/footer";
-
-
 
 @import "pages/home";
