--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -17,6 +17,7 @@
                padding:1rem;
               &--tag{
                 text-decoration: none;
+                color:$color-primary;
               }
             }
          }
