--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,5 +10,8 @@
     font-size:1.8rem;
 }
 .basic-paragraph{
-    font-size:1.2rem;
+    font-size:1.4rem;
+}
+.cta-contact{
+    font-size:1.6rem;
 }
