--- a/sass/layout/_about-section.scss
+++ b/sass/layout/_about-section.scss
@@ -1,3 +1,22 @@
 .about__section{
-    
+    .row{
+        .col-2:first-of-type{
+             display:flex;
+             justify-content: center;
+             align-items:center;
+        }
+    }
+    &--inner{
+        padding:2rem;
+        .secondary-heading-text{
+            margin-bottom: 3rem;
+        }
+        .btn-wrapper{
+            margin-top:4rem;
+        }
+        .basic-paragraph{
+            margin-bottom:1rem;
+        }
+    }
+   
 }
