--- a/sass/layout/_contact-section.scss
+++ b/sass/layout/_contact-section.scss
@@ -1,3 +1,24 @@
 .contact__section{
     padding:$section-padding;
+    &--details{
+
+     .secondary-heading-text{
+        text-align: center;
+     } 
+     .details{
+        margin-left:35%;
+     }
+     .icon{
+        margin:3rem 0;
+        text-align: center;
+     }
+      
+       
+       
+    }
+    &--form{
+       text-align: center;
+       padding: 1rem 8rem;
+
+    }
 }
