--- a/sass/layout/_cta-section.scss
+++ b/sass/layout/_cta-section.scss
@@ -5,6 +5,10 @@
     &--orange{
         background-color: $color-orange;
     }
+    &--white{
+        background-color: $color-white;
+        color:$color-black;
+    }
     &--circle-box{
         text-align: center;
         position:relative;
@@ -14,15 +18,28 @@
         }
         .circle-wrapper{
             position:relative;
+            border-radius:50%;
+            width:max-content;
+            margin:auto;
+            &:hover > .img-circle{
+                filter:blur(2px) grayscale(100%);
+                & ~ .fig-captian{
+                     opacity:1;
+                } 
+            }
            
             &__link{
                 text-decoration:none;
                 color:$color-white;
+                font-size:1.5rem;
+                text-transform: uppercase;
                 font-weight:300;
+
+                
             }
             .img-circle{
                 &:hover{
-                    filter:blur(2px);
+                    filter:blur(2px) grayscale(100%);
                     & ~ .fig-captian{
                          opacity:1;
                     } 
@@ -35,11 +52,16 @@
                 color:$color-white;
                 padding:2rem;
                 opacity:0;
+                border-radius: 15px;
                 &:hover{
                     opacity:1;
                     & ~ .img-circle{
-                        filter:blur(2px);
+                        filter:blur(2px) grayscale(100%);
                     } 
+                    &>.circle-wrapper__link{
+                       color:$color-primary;
+                      
+                    }
                 }
               
             }
@@ -51,6 +73,17 @@
       
     }
     &--box{
-
+       text-align:center;
+       .secondary-heading-text{
+            margin:3rem 0;
+       }
+       .cta-contact{
+        &--link{
+            padding-top:1rem;
+            display:block;
+            text-decoration:none;
+            color:$color-white;
+        }
+       }
     }
 }
