--- a/sass/layout/_teams-section.scss
+++ b/sass/layout/_teams-section.scss
@@ -21,6 +21,18 @@
         display:flex;
         align-items: center;
         justify-content: center;
+        &__inner{
+            padding:2rem;
+            .secondary-heading-text{
+                margin-bottom: 3rem;
+            }
+            .btn-wrapper{
+                margin-top:4rem;
+            }
+            .basic-paragraph{
+                margin-bottom:1rem;
+            }
+        }
         
     }
 
