--- a/sass/layout/_welcome-section.scss
+++ b/sass/layout/_welcome-section.scss
@@ -3,14 +3,23 @@
     .grow{
         flex-grow:1;
     }
+    &--vid{
+        margin-right:3rem;
+       .kart-vid{
+        float:right;
+       }
+    }
     &--content{
-        display:flex;
-        justify-content: center;
-        align-items: center;
+    
         width:100%;
         height:100%;
         &__inner{
-          width:80%;
+           .secondary-heading-text{
+            margin-bottom: 3rem;
+           }
+           .basic-paragraph{
+                 width:80%;
+           }
           
         }
     }
@@ -20,13 +29,26 @@
         align-items: center;
         padding:4rem 2rem;
         &__inner{
-         
+            
             &--line{
                 width:5rem;
                 color:$color-black;
+                background-color: $color-black;
                 height:.6rem;
+                margin:2rem auto;
             }
         }
    
+    }
+    &--bottom{
+        text-align: center;
+        margin:3rem 0;
+        padding:4rem 2rem;
+        .secondary-header-text{
+            margin:1rem 0;
+        }
+        .call-text{
+            margin:3rem 0;
+        }
     }
 }
