--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 
 @import "components/images";
 @import "components/navigation";
+@import "components/button";
+@import "components/form";
 
 @import "layout/masthead";
 @import "layout/flex-row";
