--- a/sass/layout/_contact-section.scss
+++ b/sass/layout/_contact-section.scss
@@ -1,12 +1,26 @@
 .contact__section{
     padding:$section-padding;
     &--details{
-
+      
      .secondary-heading-text{
         text-align: center;
+        margin-bottom: 5rem;
      } 
      .details{
-        margin-left:35%;
+      width:50%;
+        margin:0 auto;
+        &--text{
+         font-size: 1.4rem;
+         font-weight: 400;
+         margin-bottom: .5rem;
+         &__link{
+             text-decoration: none;
+             color:$color-primary;
+             margin-left:1rem;
+         }
+
+        }
+      
      }
      .icon{
         margin:3rem 0;
@@ -21,4 +35,8 @@
        padding: 1rem 8rem;
 
     }
+    .secondary-heading-text{
+      text-align: center;
+      margin-bottom: 5rem;
+   } 
 }
