--- a/sass/layout/_find-us-section.scss
+++ b/sass/layout/_find-us-section.scss
@@ -2,6 +2,7 @@
     background-image:linear-gradient(to right, rgba($color-black,0.7),rgba($color-black,0.7)),url("/img/go-kart-international-skegness-rules.jpg");
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     &--wrapper{
         padding:15rem 3rem;
         text-align: center;
